# rs-chickie

./: Cargo.toml  README.md
src/: database.rs  main.rs  repositories.rs  repositories_async.rs
src/models/: adicional.rs  avaliacao.rs  categoria.rs  cliente.rs  endereco.rs  entregador.rs  funcionario.rs  ingrediente.rs  loja.rs  mod.rs  pedido.rs  produto.rs  promocoes.rs  usuario.rs
src/services/: avaliacao_service.rs  cupom_service.rs  entrega_service.rs  ex.rs  loja_service.rs  mod.rs  pagamento_service.rs  pedido_service.rs  produto_service.rs  usuario_service.rs
